applications/package-manage/release/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
  name: pkgmange-web-ingress
spec:
  tls:
    - hosts:
        - pkgmanage.openeuler.org
      secretName: pkgmanage-openeuler-org-tls-release
  rules:
    - host: pkgmanage.openeuler.org
      http:
        paths:
          - backend:
              serviceName: package-manage-web
              servicePort: 8080
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: pkgmange-web-server-ingress
spec:
  tls:
    - hosts:
        - pkgmanage.openeuler.org
      secretName: pkgmanage-openeuler-org-tls-release
  rules:
    - host: pkgmanage.openeuler.org
      http:
        paths:
          - backend:
              serviceName: packagemanage-service
              servicePort: 80
            path: /api(/|$)(.*)

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: pkgmange-web-server-infoboard-ingress
spec:
  tls:
    - hosts:
        - pkgmanage.openeuler.org
      secretName: pkgmanage-openeuler-org-tls-release
  rules:
    - host: pkgmanage.openeuler.org
      http:
        paths:
          - backend:
              serviceName: packagemanage-service
              servicePort: 8091
            path: /api/(infoBoard/.*)
